[gd_scene load_steps=18 format=3 uid="uid://bf1pqo42tkbr8"]

[ext_resource type="Script" uid="uid://u0rpit83sjqd" path="res://scripts/player.gd" id="1_b26j0"]
[ext_resource type="PhysicsMaterial" uid="uid://dn43d15eamkbf" path="res://SpaceRockMaterial.tres" id="1_n7ghd"]
[ext_resource type="PackedScene" uid="uid://blh1ljtpc8l57" path="res://bullet.tscn" id="2_n7ghd"]
[ext_resource type="Texture2D" uid="uid://cq8utl8pemqse" path="res://spaceship.png" id="3_nvl01"]
[ext_resource type="Script" uid="uid://bx1g52uqyrult" path="res://scripts/camera_2d.gd" id="4_ivps1"]
[ext_resource type="PackedScene" uid="uid://ct2kcg2ryumfb" path="res://explode.tscn" id="4_nvl01"]
[ext_resource type="Texture2D" uid="uid://cwp2qxr5xp8px" path="res://blue_flame.png" id="6_bwjto"]
[ext_resource type="Script" uid="uid://dbh8nd8elar53" path="res://scripts/thrust_particles.gd" id="7_606se"]
[ext_resource type="AudioStream" uid="uid://beqr6nruglxa2" path="res://thruster.wav" id="8_u1c27"]
[ext_resource type="AudioStream" uid="uid://xjhd6ujolyf1" path="res://hero_laser.wav" id="9_op7ga"]
[ext_resource type="Texture2D" uid="uid://b162xqs7181w2" path="res://smoke_puff.png" id="13_urp6f"]

[sub_resource type="Curve" id="Curve_272bh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0224719), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5vw27"]
curve = SubResource("Curve_272bh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lquwl"]
lifetime_randomness = 0.1
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 100, 0)
angle_min = -678.6
angle_max = 653.8
gravity = Vector3(0, 98, 0)
alpha_curve = SubResource("CurveTexture_5vw27")

[sub_resource type="Curve" id="Curve_bwjto"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.258427), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_606se"]
curve = SubResource("Curve_bwjto")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_u1c27"]
particle_flag_disable_z = true
angle_min = -251.7
angle_max = 167.8
initial_velocity_max = 175.26
gravity = Vector3(0, 98, 0)
scale_min = 0.25
scale_max = 0.75
scale_over_velocity_max = 85.0
alpha_curve = SubResource("CurveTexture_606se")
anim_speed_max = 5.0

[node name="Player" type="RigidBody2D"]
scale = Vector2(0.25, 0.25)
disable_mode = 2
collision_layer = 145
collision_mask = 129
mass = 0.25
physics_material_override = ExtResource("1_n7ghd")
gravity_scale = 0.0
linear_damp_mode = 1
script = ExtResource("1_b26j0")
bullet_scene = ExtResource("2_n7ghd")
explosion_scene = ExtResource("4_nvl01")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("3_nvl01")
region_rect = Rect2(-3.5, 1.5, 372, 425)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(4, 0)
script = ExtResource("4_ivps1")

[node name="ThrustParticles" type="GPUParticles2D" parent="."]
amount = 50
texture = ExtResource("6_bwjto")
lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_lquwl")
script = ExtResource("7_606se")

[node name="Thrust_sound" type="AudioStreamPlayer2D" parent="ThrustParticles"]
stream = ExtResource("8_u1c27")

[node name="Thrust_Timer" type="Timer" parent="ThrustParticles"]
wait_time = 0.2

[node name="Laser_Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_op7ga")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-1, -216, 59, -71, 180, 35, 176, 120, 68, 85, 2, 176, -72, 81, -175, 118, -179, 37, -54, -71)

[node name="Damage_smoke" type="GPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 15
texture = ExtResource("13_urp6f")
lifetime = 1.5
preprocess = 0.91
explosiveness = 0.1
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_u1c27")

[node name="InvulnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="ThrustParticles/Thrust_Timer" to="ThrustParticles" method="_on_thrust_timer_timeout"]
